--- a/package.json
+++ b/package.json
@@ -20,5 +20,7 @@
     "bcrypt": "^4.0.1",
     "method-override": "^3.0.0",
     "nodemon": "^2.0.2"
-  }
+  },
+  "repository": "https://github.com/prihuda/shortener.git",
+  "author": "prihuda <rqul22@gmail.com>"
 }
