--- a/package.json
+++ b/package.json
@@ -9,18 +9,26 @@
     "dev": "nodemon express_server.js"
   },
   "dependencies": {
+    "await-to-js": "^2.1.1",
     "bcrypt": "^4.0.1",
+    "bcrypt-promise": "^2.0.0",
     "body-parser": "^1.19.0",
     "cookie-session": "^1.4.0",
+    "dotenv": "^8.2.0",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
     "express-flash": "0.0.2",
+    "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
-    "moment": "^2.24.0"
+    "moment": "^2.24.0",
+    "mysql": "^2.18.1",
+    "mysql2": "^2.1.0",
+    "parse-error": "^0.2.0",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "sequelize": "^5.21.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
-  },
-  "repository": "https://github.com/prihuda/shortener.git",
-  "author": "prihuda <rqul22@gmail.com>"
+  }
 }
